--- a/segunda_estilo.css
+++ b/segunda_estilo.css
@@ -1,147 +1,150 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  /* Style the body */
-  body {
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0;
-  }
-  
-  /* Header/logo Title */
-  .header {
-    padding: 10px;
-    text-align: center;
-    background: #67ab9d;
-    color: white;
-  }
-  
-  /* Increase the font size of the heading */
-  .header h1 {
-    font-size: 40px;
-  }
-  
-  /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
-  .navbar {
-    overflow: hidden;
-    background-color: #333;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
-  }
-  
-  /* Style the navigation bar links */
-  .navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  
-  
-  /* Right-aligned link */
-  .navbar a.right {
-    float: right;
-  }
-  
-  /* Change color on hover */
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Active/current link */
-  .navbar a.active {
-    background-color: #666;
-    color: white;
-  }
-  
-  /* Column container */
-  .row {  
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
-  }
-  
-  /* Create two unequal columns that sits next to each other */
-  /* Sidebar/left column */
-  .side {
-    -ms-flex: 30%; /* IE10 */
-    flex: 30%;
-    background-color: #f1f1f1;
-    padding: 20px;
-  }
-  
-  /* Main column */
-  .main {   
-    -ms-flex: 70%; /* IE10 */
-    flex: 70%;
-    background-color: white;
-    padding: 20px;
-  }
-  
-  /* Fake image, just for this example */
-  .fakeimg {
-    background-color: #aaa;
-    width: 100%;
-    padding: 20px;
-  }
-  
-  /* Footer */
-  .footer {
-    padding: 20px;
-    text-align: center;
-    background: #ddd;
-  }
-  
-  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 700px) {
-    .row {   
-      flex-direction: column;
-    }
-  }
-  
-  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-  @media screen and (max-width: 400px) {
-    .navbar a {
-      float: none;
-      width: 100%;
-    }
-  }
-
-.side > img {
-    /* width: 20em; */
-    height: 20em;
-    border-radius: 5%;
-    border: 2px solid rgb(92, 88, 88);
-    box-shadow: rgb(28, 32, 93 / 24%) 0px 2px 8px 0px;
-    object-position: center;
-    max-width: 100%;
-    /* display: block; */
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+  box-sizing: border-box;
 }
 
-.justify-text{
-    text-align: justify;
-    }
+body {
+  font-family: 'Courier New', Courier, monospace;
+  margin: 0;
+  font-family: "Libertine", sans-serif;
+}
 
-    h1 { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 23px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } h3 { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } p { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } blockquote { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } pre { font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+.header {
+  padding: 10px;
+  text-align: center;
+  background: #67ab9d;
+  color: white;
+}
 
-h5 > img {
-       /* width: 20em; */
-       height: 20em;
-       /* border-radius: 5%; */
-       /* border: 2px solid rgb(92, 88, 88); */
-       box-shadow: rgb(28, 32, 93 / 24%) 0px 2px 8px 0px;
-       object-position: center;
-       max-width: 100%;
-       /* display: block; */
-       margin-left: auto;
-       margin-right: auto;
-       width: 60%;
+.header h1 {
+  font-size: 40px;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+.navbar a.right {
+  float: right;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #666;
+  color: white;
+}
+
+.row {
+  display: flex;
+}
+
+.side_left {
+  flex: 20%;  /* reducido de 30% a 15% */
+  background-color: #f1f1f1;
+  padding: 20px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.side_left p {
+  font-size: 8px; /* Adjust the font size as desired */
+}
+
+.side_right {
+  flex: 5%;  /* reducido de 30% a 15% */
+  background-color: #f1f1f1;
+  padding: 20px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.main {
+  flex: 85%;  /* aumentado de 70% a 85% */
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+}
+
+@media screen and (max-width: 700px) {
+  .row {
+      flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .navbar a {
+      float: none;
+      width: 100%;
+  }
+}
+
+.side_left > img {
+  height: auto; /* cambia a auto para mantener la proporción de la imagen */
+  max-width: 100%; /* asegúrate de que la imagen no sea más ancha que su contenedor */
+  /* ...resto de reglas... */
+}
+
+/* .side_right > img {
+  height: auto; /* cambia a auto para mantener la proporción de la imagen */
+  /* max-width: 100%; asegúrate de que la imagen no sea más ancha que su contenedor */
+  /* ...resto de reglas... */
+/* } */ */
+
+.justify-text {
+  text-align: justify;
+}
+
+.project {
+  background-color: #f0f0f0;
+  margin-bottom: 15px;
+  margin-right: 10px; /* agrega margen a la derecha */
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 20px;
+  margin: 15px 10px;
+  display: flex;
+  align-items: center;
+
+}
+
+.main, .side_left, .side_right {
+  margin: 10px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #f8f9fa;
+  border-top: 1px solid #e9ecef;
 }
