--- a/stylesheets/segunda_estilo.css
+++ b/stylesheets/segunda_estilo.css
@@ -6,49 +6,83 @@ body {
   font-family: 'Courier New', Courier, monospace;
   margin: 0;
   font-family: "Libertine", sans-serif;
+  background-color: #67ab9d;
 }
 
+
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 10px;
-  text-align: center;
   background: #67ab9d;
   color: white;
 }
 
-.header h1 {
-  font-size: 40px;
+.title-navbar-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.header-title {
+  text-align: center;
+}
+
+.social-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 50px;
+}
+
+.social-links a img {
+  height: 24px; 
 }
 
 .navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  bottom: 20px; /* ajustar este valor según sea necesario */
+  left: 50%; /* Centra horizontalmente */
+  transform: translateX(-50%); /* Centra respecto a su propia anchura */
+  width: 20%; /* Asegúrate de que la barra de navegación tenga una anchura establecida */
+  background-color: rgba(90 , 51, 51, 0.4);  /* semi-transparente */
+  height: 40px;  /* más pequeña */
+  border-top-left-radius: 10px;  /* redondear esquina superior izquierda */
+  border-top-right-radius: 10px;  /* redondear esquina superior derecha */
+  /* ... el resto de tus estilos para .navbar ... */
+  border-radius: 10px;
+  padding: 0px;
 }
+
+
 
 .navbar a {
   float: left;
-  display: block;
+  display: block; 
   color: white;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
+  border-radius: 50px;
+  /* padding: px; */
 }
 
-.navbar a.right {
-  float: right;
-}
+
 
 .navbar a:hover {
   background-color: #ddd;
-  color: black;
+  /* elimina cualquier regla de font-size que puedas tener aquí */
+  /* width: 40%; */
+  background-color: rgba(120, 51, 51, 1);  /* semi-transparente */
+  height: 40px; 
+  border-radius: 10px;
 }
 
-.navbar a.active {
-  background-color: #666;
-  color: white;
-}
+
 
 .row {
   display: flex;
@@ -60,15 +94,18 @@ body {
   padding: 20px;
   margin-bottom: 15px;
   border-radius: 10px;
+  /* text-align: justify;
+  text-justify: inter-word;  New line   */
 }
 
-.side_left p {
-  font-size: 8px; /* Adjust the font size as desired */
-}
+/* .side_left p {
+  /* font-size: 12px; Adjust the font size as desired */
+/* } */
 
 .side_right {
   flex: 5%;  /* reducido de 30% a 15% */
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
+  background: #67ab9d;
   padding: 20px;
   margin-bottom: 15px;
   border-radius: 10px;
@@ -88,22 +125,30 @@ body {
   padding: 20px;
 }
 
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-}
 
 @media screen and (max-width: 700px) {
   .row {
       flex-direction: column;
   }
+  .navbar {
+    height: 20vh; /* Aumentar la altura de la barra de navegación para pantallas pequeñas */
+  }
 }
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    height: 20vh; /* Aumentar la altura de la barra de navegación para pantallas pequeñas */
+  }
+}
+
 
 @media screen and (max-width: 400px) {
   .navbar a {
       float: none;
       width: 100%;
+  }
+  .navbar {
+    height: 20vh; /* Aumentar la altura de la barra de navegación para pantallas pequeñas */
   }
 }
 
@@ -113,14 +158,10 @@ body {
   /* ...resto de reglas... */
 }
 
-/* .side_right > img {
-  height: auto; /* cambia a auto para mantener la proporción de la imagen */
-  /* max-width: 100%; asegúrate de que la imagen no sea más ancha que su contenedor */
-  /* ...resto de reglas... */
-/* } */ */
+
 
 .justify-text {
-  text-align: justify;
+  text-align: left;
 }
 
 .project {
@@ -140,11 +181,37 @@ body {
   margin: 10px;
 }
 
+
 .footer {
+  margin: 10px;
+  padding: 0%;
+  text-align: center;
+  background-color: #ffffff;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: #f8f9fa;
-  border-top: 1px solid #e9ecef;
+  width: 18.7%; /* ajusta este valor al ancho que desees para .footer */
+  /* margin: 0 auto;  */
+  margin-bottom: 15px;
+  border-radius: 10px;
 }
+
+.footer .footer_left, 
+.footer .footer_right {
+  align-items: center;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+}
+
+.footer .footer_left {
+  flex: 20%;
+}
+
+.footer .footer_right {
+  flex: 80%; /* Ajustado para sumar 100 con .footer_left */
+}
+
+.footer .footer_left .enlace-personalizado {
+  color: black;
+  font-weight: italic;
+  text-decoration: underline;
+}
+
