Little changes in the content.

--- a/stylesheets/segunda_estilo.css
+++ b/stylesheets/segunda_estilo.css
@@ -98,9 +98,6 @@ body {
   text-justify: inter-word;  New line   */
 }
 
-/* .side_left p {
-  /* font-size: 12px; Adjust the font size as desired */
-/* } */
 
 .side_right {
   flex: 5%;  /* reducido de 30% a 15% */
@@ -171,11 +168,12 @@ body {
   border-radius: 10px;
   padding: 10px;
   margin-top: 20px;
-  margin: 15px 10px;
+  /* margin: 15px 10px; */
   display: flex;
   align-items: center;
   
 }
+
 
 .main, .side_left, .side_right {
   margin: 10px;
